# waypoint-modifier

./: .gitignore  README.md  pyproject.toml  resample.ipynb  setup.cfg
src/waypoint_modifier/: __init__.py  app.py  resample.py  viewer.py
test/data/circle_test/: gen.py  test_0001.csv  test_base.csv
