[metadata]
name = waypoint_modifier
version = 0.1.0
description = A tool to modify Waypoint files
licence = Apache-2.,0

[options]
python_requires = >=3.10, <4
package = find:
package_dir =
    = src
include_package_data = True

install_requires =
    plotly
    pandas
    numpy
    dash

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viewer = waypoint_modifier.viewer:main
    resampler = waypoint_modifier.resample:main

[flake8]
exclude = build,.git/*,.tox/*
max-line-length = 88
